--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -23,7 +23,7 @@
         <p>To update, please <a href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">download
         Pester 1.1b19</a> (for OS X 10.8) or
         <a href="http://sabi.net/nriley/software/Pester-1.1b22.dmg">Pester
-        1.1b2</a> (for OS X 10.9–10.12) and replace this copy of
+        1.1b2</a> (for OS X 10.9&ndash;macOS 10.12) and replace this copy of
         Pester with the updated version.</p>
         <p><b>You must update Pester if you are using OS X Mountain
         Lion (10.8) or later: versions 1.1b14 and earlier will not
@@ -34,7 +34,7 @@
 </table>
 <p />
 <table>
-    <tr><th>Pester 1.1 beta 22 (66)</th></tr>
+    <tr><th>Pester 1.1 beta 22 (67)</th></tr>
     <tr><td><ul>
         <li>Pester is now a 64-bit application.</li>
         <li>Use AVFoundation, Apple’s modern framework for video,
@@ -44,21 +44,22 @@
         these.  Because of a <a href="https://forums.developer.apple.com/message/59178">limitation of AVFoundation</a>,
         audio from movie playback will be sent to the system sound
         output device, rather than the alert device selected in
-        Preferences.
-        </li>
+        Preferences.</li>
         <li>Fix multiple issues related to tracking and validating
         recent media.</li>
         <li>Fix an issue introduced in 1.1b20 in which movie alerts
         would play their audio only, not their video.</li>
         <li>Fix an issue in which the All Alarms window could be
         invisible if alert restoration failed.</li>
-        <li>Update to the current version of Sparkle.</li>
+        <li>Fix multiple issues with setting and re-setting the Pester
+        system-wide keyboard equivalent.</li>
         <li>Pester no longer bounces its Dock icon when it is
         frontmost even if you have requested it to do so, since there
         is no supported way to do so in a 64-bit application.</li>
         <li>Support natural-language date and time entry on macOS
-        Sierra (10.12), by linking to Perl 5.16 on macOS
-        10.9&ndash;10.12.</li>
+        Sierra (10.12), by linking to Perl 5.16 on OS X
+        10.9&ndash;macOS 10.12.</li>
+        <li>Update to the current version of Sparkle.</li>
         <li>Code cleanups and modernization without (intended) changes
         in functionality; remove some code which was never used.</li>
     </ul></td></tr>
