Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4397,28 +4397,27 @@
 <td class=" content level2 subcell">About panel workaround breaks on 10.12 (seems fixed in 10.12.2, never mind)<br>
 </td>
 </tr></table></div></td></tr></table>
-<table cellspacing="0" border="0" cellpadding="0" class="row heighthack">
-<tr><td class=" col1 colbackground1 col_width1" style="border-bottom: none;"><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
-<img onmousedown="ioSwitch('pgBTLW__5BOO', event.shiftKey)" id="igBTLW__5BOO" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="V" src="Expanded.png" title="collapse"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
+</td>
+<td class=" content level2 subcell">Path is not shown in help tags for custom media (unlike built-in sounds)<br>
+</td>
+</tr></table></div></td></tr></table>
+<table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
+<td class=" subcell wholedocgutter level2 levelguttercolor2" style="width: 25px;"></td>
+<td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
+<img onmousedown="ioSwitch('pgBTLW__5BOO', event.shiftKey)" id="igBTLW__5BOO" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" border="0" alt="&gt;" src="Collapsed.png" title="expand"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level2 subcell">Speech voice storage changed again in 10.12, is causing crashing and incorrect voice lists<br>
 </td>
-</tr></table></div></td></tr>
-<tr><td class=" level2 colbackground1"><div class=" full levelcolor2"><table border="0" cellspacing="0" cellpadding="0" style="width:100%"><tr>
-<td style="width: 25px;" class=" subcell wholedocgutter levelguttercolor2"></td>
-<td class=" subcell wholedocgutter levelguttercolor2" style="width: 28px;"></td>
-<td class=" subcell" style="width: 16px;"></td>
-<td class="note subcell">Crashes on startup (#22)<br>Even in default US English list, Samantha is still incorrectly omitted.<br>
-</td>
-</tr></table></div></td></tr>
-</table>
-<div id="pgBTLW__5BOO" class="expanded">
+</tr></table></div></td></tr></table>
+<div id="pgBTLW__5BOO" class="collapsed">
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Give up trying to match Apple’s logic — just use SpeechObject<br>
 </td>
@@ -4426,7 +4425,7 @@
 <table cellspacing="0" border="0" cellpadding="0" class="row heighthack"><tr><td class=" col1 colbackground1 col_width1" style=""><div class=" full levelcolor3"><table border="0" cellspacing="0" cellpadding="0" style="height:100%" class=" col_width1 col1"><tr>
 <td class=" subcell wholedocgutter level3 levelguttercolor3" style="width: 41px;"></td>
 <td class=" subcell wholedocgutter indicator level3 levelguttercolor3" style="width: 28px;">
-<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
+<img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt="X" src="Checked.png">
 </td>
 <td class=" content level3 subcell">Still figure out why we are crashing in 10.12 — wrong is one thing, crashing is another<br>
 </td>
@@ -4437,7 +4436,7 @@
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
-<td class=" content level2 subcell">Path info in help tag for custom media (not built-in sounds) is no longer displaying (regression from…?)<br>
+<td class=" content level2 subcell">Test on 10.9 and 10.10<br>
 </td>
 </tr></table></div></td></tr></table>
 </div>
