Pester to do.oo3: Updated status.

--- a/Pester to do.html/index.html
+++ b/Pester to do.html/index.html
@@ -4436,7 +4436,7 @@
 <td class=" subcell wholedocgutter indicator level2 levelguttercolor2" style="width: 28px;">
 <img border="0" style="margin-left: 3px; margin-right:3px; margin-top: 3px;" alt="*" src="LeafRowHandle.png"><img border="0" style="margin-left: 2px; margin-right: 2px; margin-top: 3px;" alt=" " src="Unchecked.png">
 </td>
-<td class=" content level2 subcell">Test on 10.9 and 10.10<br>
+<td class=" content level2 subcell">Test on 10.9 through 10.12<br>
 </td>
 </tr></table></div></td></tr></table>
 </div>
