--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -20,11 +20,11 @@
       <tr><td>
         <p>A recent Apple security update causes updates through this
           window to fail.</p>
-        <p>To update, please
-          <a href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">download
-            Pester 1.1b19</a> (for OS X 10.8) or
-          <a href="http://sabi.net/nriley/software/Pester-1.1b22.dmg">Pester
-            1.1b2</a> (for OS X 10.9&ndash;macOS 10.12) and replace this copy of
+        <p>To update, please download
+          <a href="http://sabi.net/nriley/software/Pester-1.1b19.dmg">Pester
+            1.1b19</a> (for OS X 10.8) or
+          <a href="http://sabi.net/nriley/software/Pester-1.1b23.dmg">Pester
+            1.1b23</a> (for OS X 10.9&ndash;macOS 10.13) and replace this copy of
           Pester with the updated version.</p>
         <p><b>You must update Pester if you are using OS X Mountain
           Lion (10.8) or later: versions 1.1b14 and earlier will not
@@ -32,6 +32,26 @@
         <p>Pester 1.1b15 and later are again able to update through
           this window.</p>
       </td></tr>
+    </table>
+    <p />
+    <table>
+      <tr><th>Pester 1.1 beta 23 (XX)</th></tr>
+      <tr><td><ul>
+        <li>Fix yet another crash on launch because the (undocumented)
+          storage format for speech voice selections changed again in
+          macOS Sierra (10.12).  Pester now preferentially uses SPI
+          rather than trying to parse files on disk, which may be more
+          robust to future changes.  (Apple’s documented methods for
+          obtaining voice lists have not kept pace with changes in how
+          voices are downloaded and activated.)  Thanks to Ed Heltzel
+          for the report.</li>
+        <li>Fix a regression in which the width of the contents pane in
+          the Read Me window was not constrained.</li>
+        <li>Update to the current version of Sparkle.</li>
+        <li>Support natural-language date and time entry on macOS
+          High Sierra (10.13), by linking to Perl 5.18 on OS X
+          10.10&ndash;macOS 10.13.</li>
+      </ul></td></tr>
     </table>
     <p />
     <table>
