Update release notes.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -45,6 +45,10 @@
           obtaining voice lists have not kept pace with changes in how
           voices are downloaded and activated.)  Thanks to Ed Heltzel
           for the report.</li>
+        <li>Work around a bug in macOS Sierra (10.12) which broke
+          keyboard navigation in the Read Me window.</li>
+        <li>Set initial keyboard focus in the Read Me window to the
+          text pane, rather than the contents pane.</li>
         <li>Fix a regression in which the width of the contents pane in
           the Read Me window was not constrained.</li>
         <li>Update to the current version of Sparkle.</li>
