--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -35,7 +35,7 @@
     </table>
     <p />
     <table>
-      <tr><th>Pester 1.1 beta 23 (XX)</th></tr>
+      <tr><th>Pester 1.1 beta 23 (70)</th></tr>
       <tr><td><ul>
         <li>Fix yet another crash on launch because the (undocumented)
           storage format for speech voice selections changed again in
