Link against Perl 5.18 on macOS 10.15 and 11.
10.15 includes 5.18 and 5.28; 11 includes 5.18 and 5.30.

The eventual plan is to remove the Perl requirement before Apple stops bundling it, which is why I have not updated this.

--- a/Updates/release-notes.html
+++ b/Updates/release-notes.html
@@ -10,6 +10,19 @@
 
   <body>
     <table>
+      <tr><th>Pester 1.1 beta 25 (XXX)</th></tr>
+      <tr><td><ul>
+        <li>Remove Growl support.</li>
+        <li>Support natural-language date and time entry on macOS
+          Catalina (10.15) and Big Sur (11), by linking to Perl 5.18
+          on macOS 10.15 and 11.</li>
+        <li><b>Note:</b> This version requires macOS 10.15 or later;
+          1.1b24 is the last version of Pester to support OS X
+          10.12&ndash;10.14.</li>
+      </ul></td></tr>
+    </table>
+    <p />
+    <table>
       <tr><th>Pester 1.1 beta 24 (71)</th></tr>
       <tr><td><ul>
         <li>Update appearance for macOS Mojave's Dark Mode and accent
